General progress on API and serialization.